# M0CLUB-PRED-ORACLE

./: CHANGELOG.md  LICENSE  M0Club Lib Schema  README.md  SECURITY.md  rust-toolchain.toml
M0Git/workflows/: docker.yml  engine.yml  release.yml
config/: dev.toml  prod.toml  staging.toml
config/markets/: crypto.toml  macro.toml  politics.toml  sports.toml
config/risk/: anomaly-rules.toml  slashing-params.toml  thresholds.toml
config/telemetry/: otel.toml  prometheus.yml
core-engine/: Cargo.toml  README.md  build.sh
docs/: glossary.md
docs/engine-spec/: anomaly-guardrails.md  backtesting.md  bundle-hashing.md  confidence-intervals.md  data-ingestion.md  models-bayes.md  performance.md
docs/ops/: deploy-k8s.md  incident-response.md  key-management.md  migrations.md  runbooks.md  signer-rotation.md
docs/protocol-spec/: replay-protection.md  signer-set.md
services/: Cargo.toml  README.md
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: error.rs  main.rs
services/api-gateway/src/auth/: api_keys.rs  jwt.rs  mod.rs
services/api-gateway/src/cache/: mod.rs  redis.rs  ttl.rs
services/api-gateway/src/db/: mod.rs  postgres.rs
services/api-gateway/src/middleware/: mod.rs  rate_limit.rs  request_id.rs  tracing.rs
services/api-gateway/src/openapi/: spec.rs
services/api-gateway/src/routes/: epochs.rs  health.rs  markets.rs  metrics.rs  mod.rs  predictions.rs
services/dashboard/: Dockerfile  next.config.js  package.json  tsconfig.json
services/dashboard/src/app/: layout.tsx  page.tsx
services/dashboard/src/pages/: ws.tsx
services/indexer/: Cargo.toml  Dockerfile
services/indexer/src/: error.rs  main.rs  program_subscriber.rs  reorg_handling.rs
services/indexer/src/parser/: m0_oracle.rs  m0_registry.rs  mod.rs
services/indexer/src/storage/: clickhouse.rs  mod.rs  postgres.rs
services/jobs/: Cargo.toml  Dockerfile
services/jobs/src/: main.rs  scheduler.rs
services/jobs/src/tasks/: backfill.rs  cleanup.rs  mod.rs  recompute.rs  reconcile.rs
services/realtime/: Cargo.toml  Dockerfile
services/realtime/src/: main.rs  pubsub.rs  throttling.rs  ws.rs
tests/: README.md  package.json  tsconfig.json
tests/fuzz/engine/: README.md  fuzz_engine.py
tests/fuzz/programs/: Cargo.toml  README.md  rust-toolchain.toml
tests/fuzz/programs/fuzz_targets/: m0_oracle_fuzz.rs
tests/integration/: _helpers.ts  e2e_commit_reveal.spec.ts  e2e_oracle_flow.spec.ts  e2e_reorg_resilience.spec.ts
tests/integration/fixtures/: README.md  markets.json  prediction.json
tests/load/k6/: smoke.js
tests/load/scenarios/: README.md  run.js
