
[package]
name = "m0-api-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "signal", "time"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.7", features = ["v4"] }
time = "0.3"
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
# Optional DB/cache deps (kept compile-ready)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "migrate"], default-features = false }
redis = { version = "0.25", features = ["tokio-comp"] }
