
[package]
name = "m0-indexer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.7", features = ["v4"] }
# Solana client (optional). Keep compile light: feature-gated usage via env.
solana-client = "1.18.22"
solana-sdk = "1.18.22"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "migrate"], default-features = false }
